--- a/package.json
+++ b/package.json
@@ -5,7 +5,15 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.0"
+    "react-scripts": "3.0.0",
+    "axios": "^0.18.0",
+    "node-sass": "^4.11.0",
+    "npm-sass": "^2.3.0",
+    "react-icons": "^3.5.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "firebase": "^5.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
